objects/Renewal_Request__c.object
<CustomObject>
    <fields>
        <fullName>Cancel_Comments__c</fullName>
        <label>Cancel Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abandoned</fullName>
                    <isActive>false</isActive>
                    <label>Abandoned</label>
                </value>
                <value>
                    <fullName>AR/Disputed</fullName>
                </value>
                <value>
                    <fullName>Budget Cut</fullName>
                </value>
                <value>
                    <fullName>Champion / primary user left organization</fullName>
                </value>
                <value>
                    <fullName>Chose another Partner</fullName>
                </value>
                <value>
                    <fullName>Client do not recognize the sale</fullName>
                </value>
                <value>
                    <fullName>Company Closure</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Customer Not Proceeding</fullName>
                </value>
                <value>
                    <fullName>Customer Service Issue</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction (Product / Company / Support)</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t need / Don&apos;t use</fullName>
                </value>
                <value>
                    <fullName>Duplicated Entry</fullName>
                </value>
                <value>
                    <fullName>ERP Issues</fullName>
                </value>
                <value>
                    <fullName>Functionality</fullName>
                </value>
                <value>
                    <fullName>Insufficient Amount of CAF Credits</fullName>
                </value>
                <value>
                    <fullName>Lack of Evolution of the Solution</fullName>
                </value>
                <value>
                    <fullName>Lack of Specific Tools to Offer</fullName>
                </value>
                <value>
                    <fullName>Loss of Strategic Customer</fullName>
                </value>
                <value>
                    <fullName>Operational Issues (Billing / Collections)</fullName>
                </value>
                <value>
                    <fullName>Organization change / restructure</fullName>
                </value>
                <value>
                    <fullName>Partner Support</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product Performance</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>User Preference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Was_There_a_Competitor__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5280 Magazine</fullName>
                </value>
                <value>
                    <fullName>ABA-ALI Continuing Professional Education</fullName>
                </value>
                <value>
                    <fullName>Abacus Law</fullName>
                </value>
                <value>
                    <fullName>Abstract Master</fullName>
                </value>
                <value>
                    <fullName>AccessData</fullName>
                </value>
                <value>
                    <fullName>Accountedge</fullName>
                </value>
                <value>
                    <fullName>Actionstep</fullName>
                </value>
                <value>
                    <fullName>Aderant</fullName>
                </value>
                <value>
                    <fullName>Aderant - Total Office</fullName>
                </value>
                <value>
                    <fullName>Advantage Law</fullName>
                </value>
                <value>
                    <fullName>Altman Weil</fullName>
                </value>
                <value>
                    <fullName>American Lawyer Media (ALM)</fullName>
                </value>
                <value>
                    <fullName>AMFS</fullName>
                </value>
                <value>
                    <fullName>Amicus Attorney</fullName>
                </value>
                <value>
                    <fullName>AmLaw Economic Survey</fullName>
                </value>
                <value>
                    <fullName>ASI</fullName>
                </value>
                <value>
                    <fullName>ATO</fullName>
                </value>
                <value>
                    <fullName>Attorney at Law Magazine</fullName>
                </value>
                <value>
                    <fullName>Attorneys Online</fullName>
                </value>
                <value>
                    <fullName>Avvo</fullName>
                </value>
                <value>
                    <fullName>BankruptcyPRO</fullName>
                </value>
                <value>
                    <fullName>Bar Associations</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Best Lawyers</fullName>
                </value>
                <value>
                    <fullName>BHL Software</fullName>
                </value>
                <value>
                    <fullName>BigTime</fullName>
                </value>
                <value>
                    <fullName>Bill4Time</fullName>
                </value>
                <value>
                    <fullName>Bloomberg/BNA (Bureau of National Affairs)</fullName>
                </value>
                <value>
                    <fullName>Brief Encounters</fullName>
                </value>
                <value>
                    <fullName>CaseFox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__r.Opportunity_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Requests</relationshipLabel>
        <relationshipName>Renewal_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Renewal Requests</relationshipLabel>
        <relationshipName>Renewal_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remove_Comments__c</fullName>
        <label>Remove Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remove_Reason__c</fullName>
        <label>Remove Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prior Year Cancellation</fullName>
                </value>
                <value>
                    <fullName>Duplicate Renewal</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remove_Renewal_Update_Status__c</fullName>
        <label>Remove Renewal Update Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Full Cancel</fullName>
                </value>
                <value>
                    <fullName>Partial Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Quote_Number__c</fullName>
        <formula>Quote__r.SAP_Quote_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Remove_Renewal_Request_Status__c</fullName>
        <label>SAP Remove Renewal Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Remove_Renewal_Status_Description__c</fullName>
        <label>SAP Remove Renewal Status Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Was_There_a_Competitor__c</fullName>
        <label>Was There a Competitor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Renewal Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Renewal Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Test_LastModifiedBy</fullName>
        <active>true</active>
        <errorConditionFormula>CreatedBy.FirstName == &apos;Debarghya&apos;</errorConditionFormula>
        <errorMessage>ERROR LastModifiedBy</errorMessage>
    </validationRules>
</CustomObject>